bugfix notices
