# swagger.json
@@ -303,38 +303,20 @@
       }
     },
 
-    "/api/users/verify/:verificationToken": {
+    "/api/users/verify/{verificationToken}": {
       "get": {
         "tags": ["Auth"],
         "summary": "Update user token",
 
         "parameters": [
           {
-            "in": "header",
+            "in": "path",
             "name": "authorization",
             "required": "true",
             "type": "string",
             "description": "The token issued to the current user"
           }
         ],
-        "security": [{ "Bearer": [] }],
-
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "string"
-              },
-              "example": {
-                "verificationToken": {
-                  "type": "string",
-                  "description": "User's verificationToken"
-                }
-              }
-            }
-          }
-        },
 
         "responses": {
           "200": {
@@ -449,28 +431,32 @@
       }
     },
 
-    "/api/notices/:categoryName": {
+    "/api/notices/{categoryName}": {
       "get": {
         "tags": ["Notices"],
         "summary": "Receiving ads by category",
 
-        "requestBody": {
-          "description": "Notice's object",
-          "required": true,
-          "content": {
+        "parameters": [
+          {
+            "name": "categoryName",
+            "in": "path",
+            "required": true,
+            "description": "Category Name",
+            "schema": {
+              "type": "string",
+              "example": "sell"
+            }
+          }
+        ],
+
+        "responses": {
+          "200": {
+            "description": "Successful operation",
             "application/json": {
               "schema": {
                 "$ref": "#/components/schemas/noticeSchema"
               }
             }
-          }
-        },
-
-        "parameters": [],
-
-        "responses": {
-          "200": {
-            "description": "Successful operation"
           },
           "404": {
             "description": "Not found"
@@ -487,6 +473,8 @@
         "tags": ["Notices"],
         "summary": "Adding ads according to the selected category",
 
+        "security": [{ "Bearer": [] }],
+
         "requestBody": {
           "description": "Notice's object",
           "required": true,
@@ -498,18 +486,6 @@
             }
           }
         },
-
-        "parameters": [
-          {
-            "in": "header",
-            "name": "authorization",
-            "required": "true",
-            "type": "string",
-            "description": "The token issued to the current user"
-          }
-        ],
-
-        "security": [{ "Bearer": [] }],
 
         "responses": {
           "201": {
@@ -528,7 +504,7 @@
       }
     },
 
-    "/api/notices/:id": {
+    "/api/notices/find/{id}": {
       "get": {
         "tags": ["Notices"],
         "summary": "Receiving one ad",
@@ -541,13 +517,13 @@
             "description": "User's id",
             "schema": {
               "type": "string",
-              "example": "1"
+              "example": "63d93eb88066bf67f18c73f8"
             }
           }
         ],
 
         "responses": {
-          "201": {
+          "200": {
             "description": "Successful operation",
             "content": {
               "application/json": {
@@ -572,15 +548,6 @@
         "tags": ["Notices"],
         "summary": "Receiving ads of the authorized user added by him to the favorites",
 
-        "parameters": [
-          {
-            "in": "header",
-            "name": "authorization",
-            "required": "true",
-            "type": "string",
-            "description": "The token issued to the current user"
-          }
-        ],
         "security": [{ "Bearer": [] }],
 
         "responses": {
@@ -597,18 +564,22 @@
       }
     },
 
-    "/api/notices/:noticeId/favorites": {
+    "/api/notices/{noticeId}/favorites": {
       "post": {
         "tags": ["Notices"],
         "summary": "Adding an authorized user's ad to favorites",
 
         "parameters": [
           {
-            "in": "header",
-            "name": "authorization",
+            "in": "path",
+            "name": "noticeId",
             "required": "true",
             "type": "string",
-            "description": "The token issued to the current user"
+            "description": "",
+            "schema": {
+              "type": "string",
+              "example": "63d93eb88066bf67f18c73f8"
+            }
           }
         ],
         "security": [{ "Bearer": [] }],
@@ -632,11 +603,15 @@
 
         "parameters": [
           {
-            "in": "header",
-            "name": "authorization",
+            "in": "path",
+            "name": "noticeId",
             "required": "true",
             "type": "string",
-            "description": "The token issued to the current user"
+            "description": "",
+            "schema": {
+              "type": "string",
+              "example": "63d93eb88066bf67f18c73f8"
+            }
           }
         ],
         "security": [{ "Bearer": [] }],
@@ -663,15 +638,6 @@
         "tags": ["Notices"],
         "summary": "Receiving ads of an authorized user created by the same user",
 
-        "parameters": [
-          {
-            "in": "header",
-            "name": "authorization",
-            "required": "true",
-            "type": "string",
-            "description": "The token issued to the current user"
-          }
-        ],
         "security": [{ "Bearer": [] }],
 
         "responses": {
@@ -691,18 +657,18 @@
       }
     },
 
-    "/api/notices/:noticeId": {
+    "/api/notices/{noticeId}": {
       "delete": {
         "tags": ["Notices"],
         "summary": "Deleting an ad of an authorized user",
 
         "parameters": [
           {
-            "in": "header",
-            "name": "authorization",
+            "in": "path",
+            "name": "noticeId",
             "required": "true",
             "type": "string",
-            "description": "The token issued to the current user"
+            "description": ""
           }
         ],
         "security": [{ "Bearer": [] }],
@@ -729,15 +695,6 @@
         "tags": ["User"],
         "summary": "Receiving personal information about the user and information about the user's animals",
 
-        "parameters": [
-          {
-            "in": "header",
-            "name": "authorization",
-            "required": "true",
-            "type": "string",
-            "description": "The token issued to the current user"
-          }
-        ],
         "security": [{ "Bearer": [] }],
 
         "responses": {
@@ -756,16 +713,8 @@
         "tags": ["User"],
         "summary": "Adding a user animal card",
 
-        "parameters": [
-          {
-            "in": "header",
-            "name": "authorization",
-            "required": "true",
-            "type": "string",
-            "description": "The token issued to the current user"
-          }
-        ],
         "security": [{ "Bearer": [] }],
+
         "requestBody": {
           "description": "Pets object",
           "required": true,
@@ -799,22 +748,22 @@
       }
     },
 
-    "/api/mypets/:petId": {
+    "/api/mypets/{petId}": {
       "delete": {
         "tags": ["User"],
         "summary": "Removing the card with the user's animal",
 
-        "parameters": [
-          {
-            "in": "header",
-            "name": "authorization",
-            "required": "true",
-            "type": "string",
-            "description": "The token issued to the current user"
-          }
-        ],
         "security": [{ "Bearer": [] }],
 
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": "true",
+            "type": "string",
+            "description": ""
+          }
+        ],
         "responses": {
           "200": {
             "description": "Successful operation"
